# Credential-Hunter

./: .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  Cargo-mvp.toml  Cargo.toml  Dockerfile  ELITE_FEATURES_SUMMARY.md  LICENSE  README.md  SECURITY.md  SIMD_IMPLEMENTATION_SUMMARY.md  TESTING_SUMMARY.md  THREAT-MAP.md  async_refactor_simple_test.rs  async_refactor_test.rs  comprehensive_test_suite.rs  demo_elite_features.rs  deny.toml  enterprise_features_test.rs  enterprise_simple_test.rs  fedora_test_suite.sh  final_test_runner.rs  simd_comprehensive_test.rs  simd_simple_test.rs  simd_test_runner.rs  test_runner.rs  test_secrets.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  security.yml  simple-ci.yml
benches/: advanced_features_bench.rs  ech_benchmarks.rs  elite_performance_bench.rs
ech-agent/: Cargo.toml
ech-agent/src/: daemon.rs
ech-cli/: Cargo.toml
ech-cli/src/: main.rs
ech-cli/tests/: basic_tests.rs  cli_unit_tests.rs
ech-core/: Cargo.toml
ech-core/src/: container_scanner.rs  ebpf_scanner.rs  error.rs  forensic_scanner.rs  lib.rs  types.rs  yara_engine.rs
ech-core/src/container/: mod.rs
ech-core/src/core/: config.rs  engine.rs  lockfree.rs  metrics.rs  mod.rs  platform.rs  scheduler.rs  security.rs
ech-core/src/detection/: context.rs  engine.rs  entropy.rs  imds_hunter.rs  mod.rs  patterns.rs  webauthn_real.rs  webauthn_simple.rs
ech-core/src/engine/: event_bus.rs
ech-core/src/filesystem/: archives.rs
ech-core/src/memory/: dump_analyzer.rs  mod.rs  process.rs  regions.rs  scanner.rs  stealth.rs  types.rs
ech-core/src/processing/: distributed.rs
ech-core/src/remediation/: mod.rs
ech-core/src/reporting/: compliance.rs  executive.rs  json.rs  metrics.rs  mod.rs  sarif.rs
ech-core/src/security/: anti_debug.rs  mod.rs
ech-core/src/siem/: events.rs  formatters.rs  health.rs  integration.rs  logging.rs  masking.rs  mod.rs
ech-core/src/simd/: entropy.rs  mod.rs
ech-core/src/stealth/: advanced_evasion.rs  cleanup.rs  detection.rs  engine.rs  lsa_bypass.rs  mod.rs  polymorphism.rs  protection.rs
ech-core/tests/: basic_tests.rs  cli_tests.rs  comprehensive_unit_tests.rs  integration_tests.rs  simple_tests.rs  working_tests.rs
ech-plugin/: Cargo.toml
ech-plugin/src/: lib.rs  main.rs  runtime.rs  sdk.rs
ech-simd/: Cargo.toml  build.rs
ech-simd/src/: lib.rs  memory_scanner.rs  pattern_matcher.rs  simd_utils.rs
examples/: advanced_hunting_demo.rs  custom_plugin.rs  working_demo.rs
rules/: api_keys.yar  cloud_credentials.yar  database_credentials.yar
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  security.rs  zero_copy.rs
src/detection/: classifier.rs  context.rs  engine.rs  mod.rs  patterns.rs  yara_integration.rs
src/filesystem/: analyzers.rs  filters.rs  hunter.rs  metadata.rs  mod.rs  scanner.rs  watchers.rs
src/memory/: analyzer.rs  extractor.rs  mod.rs  process.rs  scanner.rs  secure_allocator.rs
src/processing/: distributed.rs  mod.rs
src/security/: critical_errors.rs  self_healing.rs
src/siem/: correlators.rs  transports.rs
src/simd/: memory.rs  patterns.rs  tuning.rs
src/stealth/: engine.rs  evasion.rs  hardware.rs  injection.rs  mod.rs  obfuscation.rs
tests/: advanced_features_test.rs  basic_functionality.rs  basic_integration.rs  comprehensive_test.rs  elite_features_integration_test.rs  elite_features_only.rs  simple_unit_tests.rs  standalone_tests.rs
