[package]
name = "enterprise-credential-hunter"
version = "1.0.0"
authors = ["DFIR Team <security@ech-security.com>"]
edition = "2021"
description = "Enterprise-grade credential hunting and DFIR system"
license = "Commercial"
repository = "https://github.com/enterprise-security/ech"
keywords = ["security", "dfir", "credentials", "hunting", "enterprise"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["stealth", "ml-detection", "yara-integration", "simd-optimizations"]
stealth = []
process-injection = []
edr-evasion = []
ml-detection = ["candle-core", "candle-nn", "candle-transformers"]
yara-integration = ["yara"]
container-support = ["bollard", "k8s-openapi"]
siem-integration = []
simd-optimizations = ["wide", "bytemuck", "aligned-vec"]
auto-tuning = []
forensics = []
anti-edr = []

# Platform-specific features
linux-advanced = ["nix", "procfs"]
windows-advanced = ["winapi", "windows-service"]
macos-advanced = ["core-foundation", "mach2"]

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
once_cell = "1.19"
parking_lot = "0.12"
memmap2 = "0.9"

# Cryptography and security
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# Network and HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-webpki = "0.101"
url = "2.5"

# Entropy and statistical analysis
statrs = "0.16"
ordered-float = "4.2"

# Performance and SIMD optimizations
wide = "0.7"  # SIMD operations
bytemuck = "1.14"  # Safe byte casting
aligned-vec = "0.5"  # Aligned memory allocation

# Additional core dependencies
hex = "0.4"
glob = "0.3"
num_cpus = "1.16"

# Optional ML dependencies
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

# Optional YARA integration
yara = { version = "0.22", optional = true }

# Optional container support
bollard = { version = "0.15", optional = true }
k8s-openapi = { version = "0.20", optional = true, features = ["v1_28"] }

# Optional SIEM integrations (commented out problematic crates)
# kafka = { version = "0.10", optional = true }
# elasticsearch = { version = "8.4", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "user"], optional = true }
procfs = { version = "0.16", optional = true }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "processthreadsapi",
    "memoryapi",
    "handleapi",
    "synchapi",
    "fileapi",
    "winbase",
    "psapi",
    "tlhelp32",
    "winsvc",
], optional = true }
windows-service = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.9", optional = true }
mach2 = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"
test-log = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[[bin]]
name = "ech"
path = "src/main.rs"

[[bin]]
name = "ech-daemon"
path = "src/daemon.rs"

[[bin]]
name = "ech-plugin"
path = "src/plugin.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Security-focused profile for stealth operations
[profile.stealth]
inherits = "release"
opt-level = "s"  # Optimize for size
debug = false
strip = true
panic = "abort"

# Development profile with security hardening
[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Cargo audit configuration
[package.metadata.audit]
ignore = []