[workspace]
members = [
    "ech-core",
    "ech-simd", 
    "ech-cli",
    "ech-agent",
    "ech-plugin",
]
resolver = "2"
default-members = ["ech-cli"]

[workspace.package]
version = "1.0.0"
authors = ["DFIR Team <security@ech-security.com>"]
edition = "2021"
license = "Commercial"
repository = "https://github.com/enterprise-security/ech"
keywords = ["security", "dfir", "credentials", "hunting", "enterprise"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dev-dependencies]
# Testing
nextest = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
assert_cmd = "2.0"
proptest = "1.4"
mockall = "0.12"
test-log = "0.2"
crossbeam-channel = "0.5"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
once_cell = "1.19"
parking_lot = "0.12"
memmap2 = "0.9"

# Cryptography and security
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# Network and HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-webpki = "0.101"
url = "2.5"

# Entropy and statistical analysis
statrs = "0.16"
ordered-float = "4.2"

# Performance and SIMD optimizations
wide = "0.7"
bytemuck = "1.14"
aligned-vec = "0.5"

# Additional core dependencies
hex = "0.4"
glob = "0.3"
num_cpus = "1.16"
crossbeam-epoch = "0.9"
crossbeam-channel = "0.5"
rand = "0.8"
dirs = "5.0"

# 🚀 P2 ENHANCED SCANNING
ignore = "0.4"

# 🧪 TESTING
tempfile = "3.8"

# Platform-specific dependencies
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal", "user"] }
procfs = "0.16"
inotify = "0.10"

# Windows dependencies
winapi = { version = "0.3", features = [
    "winnt",
    "processthreadsapi",
    "memoryapi",
    "handleapi",
    "synchapi",
    "fileapi",
    "winbase",
    "psapi",
    "tlhelp32",
    "winsvc",
] }
windows-service = "0.6"

# macOS dependencies
core-foundation = "0.9"
mach2 = "0.4"





[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Security-focused profile for stealth operations
[profile.stealth]
inherits = "release"
opt-level = "s"  # Optimize for size
debug = false
strip = true
panic = "abort"

# Development profile with security hardening
[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true

# Workspace metadata
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
