[package]
name = "ech-simd"
description = "SIMD-optimized pattern matching and memory scanning"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["avx2", "sse4"]
avx2 = []
avx512 = []
sse4 = []
neon = []

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }

# Performance and SIMD optimizations
wide = { workspace = true }
bytemuck = { workspace = true }
aligned-vec = { workspace = true }

# Additional dependencies
hex = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86 specific SIMD support